E&C Manager - Edit Kategorien

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,8 +15,6 @@
 ; $Author: Sigrid Suski $
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.ini $
 
-; New
-
 ; changed
 SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option IDs duplicated - random option ID has been generated"
 SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields"
@@ -24,21 +22,18 @@ SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
 SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 
+
 SP.CAT.CATEGORY_GENERAL_SETTINGS="General Settings"
 SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category.name]&#34;"
 SP.SECTION_LIST_TITLE="Section: var:[section_name]"
 SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
 SP.CAT.CATEGORY_SAVE_SELECTION="Save Selection"
-SP.CAT.SELECT_PARENT_BUTTON="Select Parent Category"
-SP.CAT.CATEGORY_DESCRIPTION="Description"
-SP.CAT.CATEGORY_PUBLISHING="Publishing"
 SP.META_DATA="Meta Data"
 SP.CHANGE_NO_ID="Please select something to perform this action"
 SP.CAT.APPROVED="Approval has been granted."
 SP.CAT.UNAPPROVED="Approval has been revoked."
 SP.CAT.PUBLISHED="Category/Categories has/have been published"
 SP.CAT.UNPUBLISHED="Category/Categories has/have been unpublished"
-
 
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
@@ -96,7 +91,6 @@ SP.HEADER_CATS_STATE="State"
 SP.HEADER_CATS_APPROVAL="Approval"
 SP.HEADER_CATS_AUTHOR="Author"
 SP.HEADER_CATS_POSITION="Position"
-SP.
 
 SP.CATN.ORDER_BY_OWNER="Owner (group by)"
 SP.CATN.ORDER_BY_NAME_ASC="Name ascending"
@@ -107,6 +101,18 @@ SP.CATN.ORDER_BY_APPR_ASC="Not approved first"
 SP.CATN.ORDER_BY_APPR_DESC="Approved first"
 SP.CATN.ORDER_BY_ORDER_ASC="Position descending"
 SP.CATN.ORDER_BY_ORDER_DESC="Position descending"
+
+SP.CATN.CATEGORY_DESCRIPTION="Description"
+SP.CATN.CATEGORY_INTROTEXT="Introtext"
+SP.CATN.SELECT_CATEGORY_ICON="Icon"
+SP.CATN.CATEGORY_PUBLISHING="Publishing"
+SP.CATN.CATEGORY_NAME="Name"
+SP.CATN.CATEGORY_ALIAS="Alias"
+SP.CATN.CATEGORY_PATH="Path"
+SP.CATN.PARSE_CAT_DES="Parse Description"
+SP.CATN.CATEGORY_LOCATION="Category Location"
+SP.CATN.CATEGORY_DATA="Category Data"
+SP.CATN.SELECT_PARENT_BUTTON="Parent Category"
 
 SP.HEADER_ENTRIES_NAME="Name"
 SP.HEADER_ENTRIES_STATE="State"
