first care of index.html Revision of Category Edit, Layout of datepicker, category chooser new field type userGetter

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -35,6 +35,8 @@ SP.CAT.UNAPPROVED="Approval has been revoked."
 SP.CAT.PUBLISHED="Category/Categories has/have been published"
 SP.CAT.UNPUBLISHED="Category/Categories has/have been unpublished"
 
+SP.AMN.ADD="Add"
+
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
 SP.HEADER_FIELD_STATE="State"
@@ -113,6 +115,7 @@ SP.CATN.PARSE_CAT_DES="Parse Description"
 SP.CATN.CATEGORY_LOCATION="Category Location"
 SP.CATN.CATEGORY_DATA="Category Data"
 SP.CATN.SELECT_PARENT_BUTTON="Parent Category"
+SP.CATN.EDIT_DATA="Edit Data"
 
 SP.HEADER_ENTRIES_NAME="Name"
 SP.HEADER_ENTRIES_STATE="State"
