--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -29,6 +29,17 @@ SP.LOAD_MORE="Load More"
 SP.FILTER="Filter..."
 SP.OBJ_PUBLISHED="var:[type] has been published"
 SP.OBJ_UNPUBLISHED="var:[type] has been unpublished"
+SP.CREATED_BY="Created by"
+SP.CREATED_BY_IP="IP"
+SP.MODIFIED_AT="Last modified on"
+SP.MODIFIED_BY="Last modified by"
+SP.MODIFIED_BY_IP="IP"
+SP.CLICKCOUNTER="Click Counter"
+SP.KEYS="Keys"
+SP.DESCRIPTION="Description"
+SP.ROBOTS="Robots"
+SP.ROBOTS_NONE="none specified"
+
 
 ;=========
 ; SobiPro 1.0.7
