--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -22,6 +22,10 @@ SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
 SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 
+SP.ADD_NEW_ENTRY="Add New Entry"
+SP.EDIT_EXISTING_ENTRY="Edit Entry &#34;var:[entry.name]&#34;"
+SP.EN.ENTRY_GENERAL_SETTINGS="General Settings"
+SP.EN.BASE_DATA="Base Data"
 
 SP.CAT.CATEGORY_GENERAL_SETTINGS="General Settings"
 SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category.name]&#34;"
