--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -22,6 +22,8 @@ SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
 SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 
+
+SP.SECTION_ALL_ENTRIES_TITLE="All entries in section var:[section.name]"
 SP.ADD_NEW_ENTRY="Add New Entry"
 SP.EDIT_EXISTING_ENTRY="Edit Entry &#34;var:[entry.name]&#34;"
 SP.EN.ENTRY_GENERAL_SETTINGS="General Settings"
