--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -22,7 +22,22 @@ SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
 SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 
-
+SP.ORDER_BY_NAME_ASCENDING="Name ascending"
+SP.ORDER_BY_NAME_DESCENDING="Name descending"
+SP.ORDER_BY_COUNT_ASCENDING="Counter ascending"
+SP.ORDER_BY_COUNT_DESCENDING="Counter descending"
+SP.ORDER_BY_POSITION_ASCENDING="Position ascending"
+SP.ORDER_BY_POSITION_DESCENDING="Position descending"
+SP.ORDER_BY_POPULARITY_ASCENDING="Popularity ascending"
+SP.ORDER_BY_POPULARITY_DESCENDING="Popularity descending"
+SP.ORDER_BY_CREATION_DATE_ASC="Creation date ascending"
+SP.ORDER_BY_CREATION_DATE_DESC="Creation date descending"
+SP.ORDER_BY_UPDATE_DATE_ASC="Last update date ascending"
+SP.ORDER_BY_UPDATE_DATE_DESC="Last update date descending"
+SP.ORDER_BY_EXPIRATION_DATE_ASC="Expiration date ascending"
+SP.ORDER_BY_EXPIRATION_DATE_DESC="Expiration date descending"
+SP.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing Entry after"
+SP.DAYS="Days"
 SP.SECTION_ALL_ENTRIES_TITLE="All entries in section var:[section.name]"
 SP.ADD_NEW_ENTRY="Add New Entry"
 SP.EDIT_EXISTING_ENTRY="Edit Entry &#34;var:[entry.name]&#34;"
@@ -539,7 +554,6 @@ SP.SEC.CFG.SHOW_CATEGORY_DESC="Show Category Description"
 SP.SEC.CFG.PARSE_CATEGORY_DESC="Parse Category Description"
 SP.SEC.CFG.ALLOW_ADD_ENTRY_UP_TO="Allow adding Entry in up to:categories"
 SP.SEC.CFG.SECURITY_SETTINGS="Security Settings"
-SP.SEC.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing Entry after:days"
 SP.SEC.CFG.ALLOWED_TAGS="Allowed Tags"
 SP.SEC.CFG.ALLOWED_ATTRIBUTES="Allowed Attributes"
 SP.SEC.CFG.SECTION_TEMPLATE="Section Template"
