image revision in edit entry

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -38,19 +38,22 @@ SP.ORDER_BY_EXPIRATION_DATE_ASC="Expiration date ascending"
 SP.ORDER_BY_EXPIRATION_DATE_DESC="Expiration date descending"
 SP.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing Entry after"
 SP.DAYS="Days"
+
 SP.SECTION_ALL_ENTRIES_TITLE="All entries in section var:[section.name]"
+SP.SECTION_LIST_TITLE="Section: var:[section_name]"
+SP.CHANGE_NO_ID="Please select something to perform this action"
+SP.META_DATA="Meta Data"
+
 SP.ADD_NEW_ENTRY="Add New Entry"
 SP.EDIT_EXISTING_ENTRY="Edit Entry &#34;var:[entry.name]&#34;"
 SP.EN.ENTRY_GENERAL_SETTINGS="General Settings"
 SP.EN.BASE_DATA="Base Data"
+SP.EN.ENTRY_PUBLISHING="Publishing"
 
 SP.CAT.CATEGORY_GENERAL_SETTINGS="General Settings"
 SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category.name]&#34;"
-SP.SECTION_LIST_TITLE="Section: var:[section_name]"
 SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
 SP.CAT.CATEGORY_SAVE_SELECTION="Save Selection"
-SP.META_DATA="Meta Data"
-SP.CHANGE_NO_ID="Please select something to perform this action"
 SP.CAT.APPROVED="Approval has been granted."
 SP.CAT.UNAPPROVED="Approval has been revoked."
 SP.CAT.PUBLISHED="Category/Categories has/have been published"
