--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -39,6 +39,7 @@ SP.KEYS="Keys"
 SP.DESCRIPTION="Description"
 SP.ROBOTS="Robots"
 SP.ROBOTS_NONE="none specified"
+SP.PUBLISHED="Published"
 
 
 ;=========
