Filter manager - ready

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -22,6 +22,7 @@ SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
 SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 
+SP.FLR.MSG_FILTER_SAVED="All changes saved"
 SP.ORDER_BY_NAME_ASCENDING="Name ascending"
 SP.ORDER_BY_NAME_DESCENDING="Name descending"
 SP.ORDER_BY_COUNT_ASCENDING="Counter ascending"
