Edit Entry layout

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -116,7 +116,7 @@ SP.EMN.REORDERED="Entries are re-ordered now."
 SP.HEADER_CATS_NAME="Category Name"
 SP.HEADER_CATS_STATE="State"
 SP.HEADER_CATS_APPROVAL="Approval"
-SP.HEADER_CATS_AUTHOR="Author"
+SP.HEADER_CATS_AUTHOR="Created by"
 SP.HEADER_CATS_POSITION="Position"
 
 SP.CATN.ORDER_BY_OWNER="Owner (group by)"
@@ -145,7 +145,7 @@ SP.CATN.EDIT_DATA="Edit Data"
 SP.HEADER_ENTRIES_NAME="Name"
 SP.HEADER_ENTRIES_STATE="State"
 SP.HEADER_ENTRIES_APPROVAL="Approval"
-SP.HEADER_FIELD_AUTHOR="Author"
+SP.HEADER_FIELD_AUTHOR="Owner"
 SP.EMN_FILTER="Filter..."
 
 SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
