--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -30,6 +30,7 @@ SP.FILTER="Filter..."
 SP.OBJ_PUBLISHED="var:[type] has been published"
 SP.OBJ_UNPUBLISHED="var:[type] has been unpublished"
 SP.CREATED_BY="Created by"
+SP.OWNER="Owner"
 SP.CREATED_BY_IP="IP"
 SP.MODIFIED_AT="Last modified on"
 SP.MODIFIED_BY="Last modified by"
