checkboxgroup and Radios

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -196,6 +196,7 @@ SP.FMN.IMG.KEEP_ORG="Keep Original Image"
 SP.FM.IMG.RESIZEHEIGHT_TO="Resize Height to"
 SP.FM.IMG.RESIZEWIDTH_TO="Resize Width to"
 SP.FMN.SELECT_LIST_OPT="Single Select List"
+SP.FM.OPTIONS="all"
 
 SP.FMN.CC_TREE="SigsiuTree"
 SP.FMN.CC_SELECT_LIST="Single Select List"
