Edit Entry und Category Tab Names

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -47,11 +47,11 @@ SP.META_DATA="Meta Data"
 
 SP.ADD_NEW_ENTRY="Add New Entry"
 SP.EDIT_EXISTING_ENTRY="Edit Entry &#34;var:[entry.name]&#34;"
-SP.EN.ENTRY_GENERAL_SETTINGS="General Settings"
-SP.EN.BASE_DATA="Base Data"
+SP.EN.ENTRY_GENERAL_DATA="General Data"
+SP.EN.BASE_DATA="Entry Data"
 SP.EN.ENTRY_PUBLISHING="Publishing"
 
-SP.CAT.CATEGORY_GENERAL_SETTINGS="General Settings"
+SP.CAT.CATEGORY_GENERAL_DATA="General Data"
 SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category.name]&#34;"
 SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
 SP.CAT.CATEGORY_SAVE_SELECTION="Save Selection"
