checked out / expired / pending

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -22,6 +22,10 @@ SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
 SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 
+SP.CHECKED_OUT="Checked out by %s <br/> until %s"
+SP.ROW_PENDING="State is: pending<br/>Start publishing date is: %s"
+SP.ROW_EXPIRED="State is: expired<br/>End publishing date was: %s"
+
 SP.FLR.MSG_FILTER_SAVED="All changes saved"
 SP.ORDER_BY_NAME_ASCENDING="Name ascending"
 SP.ORDER_BY_NAME_DESCENDING="Name descending"
