--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -1105,7 +1105,7 @@ SP.FM.URL.UNIQUE_DATA="Unique Data"
 SP.FM.URL.VALIDATE_URL="Validate URL (CURL required)"
 SP.FM.URL.ALLOWED_PROTO="Allowed Protocols"
 SP.FM.URL.NEW_WINDOW="Open in new Window"
-SP.FM.UPLOAD_OPT_FILE="Upload an INI Definition File"
+SP.FM.UPLOAD_OPT_FILE="Upload INI Definition File"
 SP.FIELD.HEADER_TOGGLE="Toggle selection"
 SP.FIELD.HEADER_FID="ID"
 SP.FIELD.HEADER_ORDER_BY_FID="Order fields by id"
