Revision of Language file

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -6,7 +6,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: http://www.Sigsiu.NET
 ; ===================================================
-; @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
 ; @license see http://www.gnu.org/licenses/gpl.html GNU/GPL Version 3.
 ; You can use, redistribute this file and/or modify it under the terms of the GNU General Public License version 3
 ; ===================================================
@@ -15,58 +15,44 @@
 ; $Author: Sigrid Suski $
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.ini $
 
-; changed
-SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option IDs duplicated - random option ID has been generated"
-SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields"
-SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
-SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
-SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
+;=========
+; SobiPro 1.1
+;=========
 
-SP.CHECKED_OUT="Checked out by %s <br/> until %s"
-SP.ROW_PENDING="State is: pending<br/>Start publishing date is: %s"
-SP.ROW_EXPIRED="State is: expired<br/>End publishing date was: %s"
+; Joomla Menu Manager
+SOBI_SELECT_ENTRY="Select Entry"
+SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
 
-SP.FLR.MSG_FILTER_SAVED="All changes saved"
-SP.ORDER_BY_NAME_ASCENDING="Name ascending"
-SP.ORDER_BY_NAME_DESCENDING="Name descending"
-SP.ORDER_BY_COUNT_ASCENDING="Counter ascending"
-SP.ORDER_BY_COUNT_DESCENDING="Counter descending"
-SP.ORDER_BY_POSITION_ASCENDING="Position ascending"
-SP.ORDER_BY_POSITION_DESCENDING="Position descending"
-SP.ORDER_BY_POPULARITY_ASCENDING="Popularity ascending"
-SP.ORDER_BY_POPULARITY_DESCENDING="Popularity descending"
-SP.ORDER_BY_CREATION_DATE_ASC="Creation date ascending"
-SP.ORDER_BY_CREATION_DATE_DESC="Creation date descending"
-SP.ORDER_BY_UPDATE_DATE_ASC="Last update date ascending"
-SP.ORDER_BY_UPDATE_DATE_DESC="Last update date descending"
-SP.ORDER_BY_EXPIRATION_DATE_ASC="Expiration date ascending"
-SP.ORDER_BY_EXPIRATION_DATE_DESC="Expiration date descending"
-SP.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing Entry after"
-SP.DAYS="Days"
-
-SP.SECTION_ALL_ENTRIES_TITLE="All entries in section var:[section.name]"
-SP.SECTION_LIST_TITLE="Section: var:[section_name]"
-SP.CHANGE_NO_ID="Please select something to perform this action"
+; General texts
+SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields."
 SP.META_DATA="Meta Data"
-
-SP.ADD_NEW_ENTRY="Add New Entry"
-SP.EDIT_EXISTING_ENTRY="Edit Entry &#34;var:[entry.name]&#34;"
-SP.EN.ENTRY_GENERAL_DATA="General Data"
-SP.EN.BASE_DATA="Entry Data"
-SP.EN.ENTRY_PUBLISHING="Publishing"
-
-SP.CAT.CATEGORY_GENERAL_DATA="General Data"
-SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category.name]&#34;"
-SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
-SP.CAT.CATEGORY_SAVE_SELECTION="Save Selection"
-SP.CAT.APPROVED="Approval has been granted."
-SP.CAT.UNAPPROVED="Approval has been revoked."
-SP.CAT.PUBLISHED="Category/Categories has/have been published"
-SP.CAT.UNPUBLISHED="Category/Categories has/have been unpublished"
-
-SP.AMN.ADD="Add"
-
 SP.HEADER_ID="Id"
+SP.HEADER_FIELD_POSITION="Position"
+SP.EMN_ORDER_BY="Order by"
+
+; Toolbar
+SP.TB.SAVE_ONLY="Save"
+SP.TB.SAVE_EXIT="Save &amp; Exit"
+SP.TB.SAVE_NEW="Save as New"
+SP.TB.ACTIONS="Actions"
+SP.TB.PUBLISHING="State"
+SP.TB.ENABLED="State"
+SP.TB.REQUIRED="Required"
+SP.TB.SET_REQ="Set as Required"
+SP.TB.SET_NOT_REQ="Set as not required"
+SP.TB.EDITABLE_FIELD="Editable"
+SP.TB.SET_EDITABLE="Set field to editable"
+SP.TB.SET_NOT_EDITABLE="Remove editing permissions"
+SP.TB.ENABLE="Enable"
+SP.TB.DISABLE="Disable"
+SP.TB.EXIT="Exit"
+SP.TB.APPROVAL="Approval"
+SP.TB.REVOKE="Revoke"
+SP.TB.APPROVE="Grant"
+SP.TB.ENTRY="Entry"
+SP.TB.CATEGORY="Category"
+
+; Fields Manager
 SP.HEADER_FIELD_NAME="Field Name"
 SP.HEADER_FIELD_STATE="State"
 SP.HEADER_FIELD_TYPE="Type"
@@ -74,7 +60,6 @@ SP.HEADER_FIELD_SHOW_IN="Availability"
 SP.HEADER_FIELD_IS_REQUIRED="Required"
 SP.HEADER_FIELD_IS_EDITABLE="Editable"
 SP.HEADER_FIELD_IS_FREE="For Free"
-SP.HEADER_FIELD_POSITION="Position"
 SP.FMN.ORDER_BY_ID_ASC="Id ascending"
 SP.FMN.ORDER_BY_ID_DESC="Id descending"
 SP.FMN.ORDER_BY_NAME_ASC="Name ascending"
@@ -84,7 +69,6 @@ SP.FMN.ORDER_BY_STATE_ASC="Disabled first"
 SP.FMN.ORDER_BY_FIELDTYPE_ASC="Type ascending"
 SP.FMN.ORDER_BY_FIELDTYPE_DESC="Type descending"
 SP.FMN.ORDER_BY_SHOWIN_ASC="Availability"
-;SP.FMN.ORDER_BY_SHOWIN_DESC=""
 SP.FMN.ORDER_BY_REQUIRED_DESC="Required first"
 SP.FMN.ORDER_BY_REQUIRED_ASC="Not Required first"
 SP.FMN.ORDER_BY_EDITABLE_ASC="Non-editable first"
@@ -93,66 +77,10 @@ SP.FMN.ORDER_BY_ISFREE_ASC="Free of charge first"
 SP.FMN.ORDER_BY_ISFREE_DESC="Paid first"
 SP.FMN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.FMN.ORDER_BY_ORDER_DESC="Position descending"
-SP.FMN_ORDER_BY="Order by"
-SP.FMN.OPTIONS="Options"
-SP.FMN.STATE_CHANGE_NO_ID="Please select field first"
+SP.FMN.STATE_CHANGE_NO_ID="Please select field first."
 
-SP.EMN_ORDER_BY="Order by"
-SP.EMN.ORDER_BY_ID_ASC="Id ascending"
-SP.EMN.ORDER_BY_ID_DESC="Id descending"
-SP.EMN.ORDER_BY_NAME_ASC="Name ascending"
-SP.EMN.ORDER_BY_NAME_DESC="Name descending"
-SP.EMN.ORDER_BY_STATE_ASC="Unpublished state first"
-SP.EMN.ORDER_BY_STATE_DESC="Published state first"
-SP.EMN.ORDER_BY_APPROVAL_ASC="Not approved first"
-SP.EMN.ORDER_BY_APPROVAL_DESC="Approved first"
-SP.EMN.ORDER_BY_ORDER_ASC="Position ascending"
-SP.EMN.ORDER_BY_ORDER_DESC="Position descending"
-SP.EMN.ORDER_BY_FIELD="By Field"
-SP.EMN.ORDER_BY_OWNER="Owner (group by)"
-
-SP.EMN.APPROVED="Approval has been granted."
-SP.EMN.UNAPPROVED="Approval has been revoked."
-SP.EN.PUBLISHED="Entry has been published."
-SP.EN.UNPUBLISHED="Entry has been unpublished."
-SP.EMN.REORDERED="Entries are re-ordered now."
-
-SP.HEADER_CATS_NAME="Category Name"
-SP.HEADER_CATS_STATE="State"
-SP.HEADER_CATS_APPROVAL="Approval"
-SP.HEADER_CATS_AUTHOR="Created by"
-SP.HEADER_CATS_POSITION="Position"
-
-SP.CATN.ORDER_BY_OWNER="Owner (group by)"
-SP.CATN.ORDER_BY_NAME_ASC="Name ascending"
-SP.CATN.ORDER_BY_NAME_DESC="Name descending"
-SP.CATN.ORDER_BY_STATE_ASC="Unpublished state first"
-SP.CATN.ORDER_BY_STATE_DESC="Published state first"
-SP.CATN.ORDER_BY_APPR_ASC="Not approved first"
-SP.CATN.ORDER_BY_APPR_DESC="Approved first"
-SP.CATN.ORDER_BY_ORDER_ASC="Position descending"
-SP.CATN.ORDER_BY_ORDER_DESC="Position descending"
-
-SP.CATN.CATEGORY_DESCRIPTION="Description"
-SP.CATN.CATEGORY_INTROTEXT="Introtext"
-SP.CATN.SELECT_CATEGORY_ICON="Icon"
-SP.CATN.CATEGORY_PUBLISHING="Publishing"
-SP.CATN.CATEGORY_NAME="Name"
-SP.CATN.CATEGORY_ALIAS="Alias"
-SP.CATN.CATEGORY_PATH="Path"
-SP.CATN.PARSE_CAT_DES="Parse Description"
-SP.CATN.CATEGORY_LOCATION="Category Location"
-SP.CATN.CATEGORY_DATA="Category Data"
-SP.CATN.SELECT_PARENT_BUTTON="Parent Category"
-SP.CATN.EDIT_DATA="Edit Data"
-
-SP.HEADER_ENTRIES_NAME="Name"
-SP.HEADER_ENTRIES_STATE="State"
-SP.HEADER_ENTRIES_APPROVAL="Approval"
-SP.HEADER_FIELD_AUTHOR="Owner"
-SP.EMN_FILTER="Filter..."
-
-SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
+; Fields
+SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option Ids are used several times; a random option Id has been generated."
 SP.FMN.FIELD_GENERAL="General Field Settings"
 SP.FMN.FIELD_GENERAL_URL="URL Settings"
 SP.FMN.FIELD_GENERAL_EMAIL="Email Settings"
@@ -200,8 +128,13 @@ SP.FMN.IMG.KEEP_ORG="Keep Original Image"
 SP.FM.IMG.RESIZEHEIGHT_TO="Resize Height to"
 SP.FM.IMG.RESIZEWIDTH_TO="Resize Width to"
 SP.FMN.SELECT_LIST_OPT="Single Select List"
+SP.FMN.OPTIONS="Options"
 SP.FM.OPTIONS="all"
+SP.FMN.LENGTH_CHAR="chars"
+SP.FMN.LENGTH_ROWS="rows"
+SP.FMN.LENGTH_BYTES="bytes"
 
+; Category Chooser
 SP.FMN.CC_TREE="SigsiuTree"
 SP.FMN.CC_SELECT_LIST="Single Select List"
 SP.FMN.CC_MSELECT="Multiple Select List"
@@ -217,33 +150,120 @@ SP.FMN.CC_CATS_LIMIT_SUFFIX="categories"
 SP.FMN.CC_IS_PRIMARY="Primary Category Selector"
 SP.FMN.CC_SEARCH_METHOD="Search Method"
 
-SP.FMN.LENGTH_CHAR="chars"
-SP.FMN.LENGTH_ROWS="rows"
-SP.FMN.LENGTH_BYTES="bytes"
+; Category and Entry Manager
+SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
+SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
+SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
+SP.CHECKED_OUT="Checked out by %s <br/> until %s"
+SP.ROW_PENDING="Pending<br/>Start publishing date is: %s"
+SP.ROW_EXPIRED="Expired<br/>End publishing date was: %s"
+SP.SECTION_ALL_ENTRIES_TITLE="All entries in section var:[section.name]"
+SP.CHANGE_NO_ID="Please select at least one item to perform this action."
+SP.CAT.APPROVED="Approval has been granted."
+SP.CAT.UNAPPROVED="Approval has been revoked."
+SP.CAT.PUBLISHED="Category/Categories has/have been published"
+SP.CAT.UNPUBLISHED="Category/Categories has/have been unpublished"
+SP.ADD_NEW_ENTRY="Add New Entry"
+SP.AMN.ADD="Add"
 
-SP.TB.SAVE_ONLY="Save"
-SP.TB.SAVE_EXIT="Save &amp; Exit"
-SP.TB.SAVE_NEW="Save as New"
-SP.TB.ACTIONS="Actions"
-SP.TB.PUBLISHING="State"
-SP.TB.ENABLED="State"
-SP.TB.REQUIRED="Required"
-SP.TB.SET_REQ="Set as Required"
-SP.TB.SET_NOT_REQ="Set as not required"
-SP.TB.EDITABLE_FIELD="Editable"
-SP.TB.SET_EDITABLE="Set field to editable"
-SP.TB.SET_NOT_EDITABLE="Remove editing permissions"
-SP.TB.ENABLE="Enable"
-SP.TB.DISABLE="Disable"
-SP.TB.EXIT="Exit"
-SP.TB.APPROVAL="Approval"
-SP.TB.REVOKE="Revoke"
-SP.TB.APPROVE="Grant"
-SP.TB.ENTRY="Entry"
-SP.TB.CATEGORY="Category"
+;; Entries
+SP.HEADER_ENTRIES_NAME="Name"
+SP.HEADER_ENTRIES_STATE="State"
+SP.HEADER_ENTRIES_APPROVAL="Approval"
+SP.HEADER_FIELD_AUTHOR="Owner"
+SP.EMN_FILTER="Filter..."
+SP.EMN.ORDER_BY_ID_ASC="Id ascending"
+SP.EMN.ORDER_BY_ID_DESC="Id descending"
+SP.EMN.ORDER_BY_NAME_ASC="Name ascending"
+SP.EMN.ORDER_BY_NAME_DESC="Name descending"
+SP.EMN.ORDER_BY_STATE_ASC="Unpublished state first"
+SP.EMN.ORDER_BY_STATE_DESC="Published state first"
+SP.EMN.ORDER_BY_APPROVAL_ASC="Not approved first"
+SP.EMN.ORDER_BY_APPROVAL_DESC="Approved first"
+SP.EMN.ORDER_BY_ORDER_ASC="Position ascending"
+SP.EMN.ORDER_BY_ORDER_DESC="Position descending"
+SP.EMN.ORDER_BY_FIELD="By Field"
+SP.EMN.ORDER_BY_OWNER="Owner (group by)"
+SP.EMN.APPROVED="Approval has been granted."
+SP.EMN.UNAPPROVED="Approval has been revoked."
+SP.EN.PUBLISHED="Entry has been published."
+SP.EN.UNPUBLISHED="Entry has been unpublished."
+SP.EMN.REORDERED="Entries are re-ordered now."
 
-SOBI_SELECT_ENTRY="Select Entry"
-SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
+;; Categories
+SP.HEADER_CATS_NAME="Category Name"
+SP.HEADER_CATS_STATE="State"
+SP.HEADER_CATS_APPROVAL="Approval"
+SP.HEADER_CATS_AUTHOR="Created by"
+SP.HEADER_CATS_POSITION="Position"
+SP.CATN.ORDER_BY_OWNER="Owner (group by)"
+SP.CATN.ORDER_BY_NAME_ASC="Name ascending"
+SP.CATN.ORDER_BY_NAME_DESC="Name descending"
+SP.CATN.ORDER_BY_STATE_ASC="Unpublished state first"
+SP.CATN.ORDER_BY_STATE_DESC="Published state first"
+SP.CATN.ORDER_BY_APPR_ASC="Not approved first"
+SP.CATN.ORDER_BY_APPR_DESC="Approved first"
+SP.CATN.ORDER_BY_ORDER_ASC="Position descending"
+SP.CATN.ORDER_BY_ORDER_DESC="Position descending"
+
+;; Edit Entry
+SP.EDIT_EXISTING_ENTRY="Edit Entry &#34;var:[entry.name]&#34;"
+SP.EN.ENTRY_GENERAL_DATA="General Data"
+SP.EN.BASE_DATA="Entry Data"
+SP.EN.ENTRY_PUBLISHING="Publishing"
+
+;; Edit Category
+SP.CAT.CATEGORY_GENERAL_DATA="General Data"
+SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category.name]&#34;"
+SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
+SP.CAT.CATEGORY_SAVE_SELECTION="Save Selection"
+SP.CATN.CATEGORY_DESCRIPTION="Description"
+SP.CATN.CATEGORY_INTROTEXT="Introtext"
+SP.CATN.SELECT_CATEGORY_ICON="Icon"
+SP.CATN.CATEGORY_PUBLISHING="Publishing"
+SP.CATN.CATEGORY_NAME="Name"
+SP.CATN.CATEGORY_ALIAS="Alias"
+SP.CATN.CATEGORY_PATH="Path"
+SP.CATN.PARSE_CAT_DES="Parse Description"
+SP.CATN.CATEGORY_LOCATION="Category Location"
+SP.CATN.CATEGORY_DATA="Category Data"
+SP.CATN.SELECT_PARENT_BUTTON="Parent Category"
+SP.CATN.EDIT_DATA="Edit Data"
+
+; General Configuration
+;; Section
+SP.SECN.CFG.SECTION_NAME="Name"
+SP.SECN.ADD_SECTION_ALIAS="Alias"
+SP.SECN.CFG.SECTION_DESCRIPTION="Description"
+
+;; General Options
+SP.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing Entry after"
+SP.DAYS="days"
+
+
+; seemingly unused
+;;SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
+;;;SP.FMN_ORDER_BY="Order by"
+;SP.FMN.ORDER_BY_SHOWIN_DESC=""
+;;;SP.FLR.MSG_FILTER_SAVED="All changes saved"
+;;;SP.ORDER_BY_NAME_ASCENDING="Name ascending"
+;;;SP.ORDER_BY_NAME_DESCENDING="Name descending"
+;;;SP.ORDER_BY_COUNT_ASCENDING="Counter ascending"
+;;;SP.ORDER_BY_COUNT_DESCENDING="Counter descending"
+;;;SP.ORDER_BY_POSITION_ASCENDING="Position ascending"
+;;;SP.ORDER_BY_POSITION_DESCENDING="Position descending"
+;;;SP.ORDER_BY_POPULARITY_ASCENDING="Popularity ascending"
+;;;SP.ORDER_BY_POPULARITY_DESCENDING="Popularity descending"
+;;;SP.ORDER_BY_CREATION_DATE_ASC="Creation date ascending"
+;;;SP.ORDER_BY_CREATION_DATE_DESC="Creation date descending"
+;;;SP.ORDER_BY_UPDATE_DATE_ASC="Last update date ascending"
+;;;SP.ORDER_BY_UPDATE_DATE_DESC="Last update date descending"
+;;;SP.ORDER_BY_EXPIRATION_DATE_ASC="Expiration date ascending"
+;;;SP.ORDER_BY_EXPIRATION_DATE_DESC="Expiration date descending"
+
+;;SP.SECTION_LIST_TITLE="Section: var:[section_name]"
+
+
 
 ;=========
 ; SobiPro 1.0.4
