Revision of Language file/2

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -240,26 +240,28 @@ SP.SECN.CFG.SECTION_DESCRIPTION="Description"
 SP.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing Entry after"
 SP.DAYS="days"
 
+;; Template Data
+SP.ORDER_BY_NAME_ASCENDING="Name ascending"
+SP.ORDER_BY_NAME_DESCENDING="Name descending"
+SP.ORDER_BY_COUNT_ASCENDING="Counter ascending"
+SP.ORDER_BY_COUNT_DESCENDING="Counter descending"
+SP.ORDER_BY_POSITION_ASCENDING="Position ascending"
+SP.ORDER_BY_POSITION_DESCENDING="Position descending"
+SP.ORDER_BY_POPULARITY_ASCENDING="Popularity ascending"
+SP.ORDER_BY_POPULARITY_DESCENDING="Popularity descending"
+SP.ORDER_BY_CREATION_DATE_ASC="Creation date ascending"
+SP.ORDER_BY_CREATION_DATE_DESC="Creation date descending"
+SP.ORDER_BY_UPDATE_DATE_ASC="Last update date ascending"
+SP.ORDER_BY_UPDATE_DATE_DESC="Last update date descending"
+SP.ORDER_BY_EXPIRATION_DATE_ASC="Expiration date ascending"
+SP.ORDER_BY_EXPIRATION_DATE_DESC="Expiration date descending"
+
 
 ; seemingly unused
 ;;SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
 ;;;SP.FMN_ORDER_BY="Order by"
 ;SP.FMN.ORDER_BY_SHOWIN_DESC=""
 ;;;SP.FLR.MSG_FILTER_SAVED="All changes saved"
-;;;SP.ORDER_BY_NAME_ASCENDING="Name ascending"
-;;;SP.ORDER_BY_NAME_DESCENDING="Name descending"
-;;;SP.ORDER_BY_COUNT_ASCENDING="Counter ascending"
-;;;SP.ORDER_BY_COUNT_DESCENDING="Counter descending"
-;;;SP.ORDER_BY_POSITION_ASCENDING="Position ascending"
-;;;SP.ORDER_BY_POSITION_DESCENDING="Position descending"
-;;;SP.ORDER_BY_POPULARITY_ASCENDING="Popularity ascending"
-;;;SP.ORDER_BY_POPULARITY_DESCENDING="Popularity descending"
-;;;SP.ORDER_BY_CREATION_DATE_ASC="Creation date ascending"
-;;;SP.ORDER_BY_CREATION_DATE_DESC="Creation date descending"
-;;;SP.ORDER_BY_UPDATE_DATE_ASC="Last update date ascending"
-;;;SP.ORDER_BY_UPDATE_DATE_DESC="Last update date descending"
-;;;SP.ORDER_BY_EXPIRATION_DATE_ASC="Expiration date ascending"
-;;;SP.ORDER_BY_EXPIRATION_DATE_DESC="Expiration date descending"
 
 ;;SP.SECTION_LIST_TITLE="Section: var:[section_name]"
 
