--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -155,8 +155,8 @@ SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
 SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 SP.CHECKED_OUT="Checked out by %s <br/> until %s"
-SP.ROW_PENDING="Pending<br/>Start publishing date is: %s"
-SP.ROW_EXPIRED="Expired<br/>End publishing date was: %s"
+SP.ROW_PENDING="Pending<br/>Valid from %s"
+SP.ROW_EXPIRED="Expired<br/>Valid until %s"
 SP.SECTION_ALL_ENTRIES_TITLE="All entries in section var:[section.name]"
 SP.CHANGE_NO_ID="Please select at least one item to perform this action."
 SP.CAT.APPROVED="Approval has been granted."
@@ -1173,8 +1173,8 @@ SP.FIELD.TYPE_OPT_PREDEFINED_MULTI_DATA_SINGLE_CHOICE_RADIO="Radio buttons"
 SP.FIELD.REQUIRED_HEAD="Required"
 SP.FIELD.EDITABLE_HEAD="Editable"
 SP.FIELD.ENABLED_HEAD="State"
-SP.FIELD.HEADER_ORDER_BY_VALIDSINCE="Valid From"
-SP.FIELD.HEADER_ORDER_BY_VALIDUNTIL="Valid Until"
+SP.FIELD.HEADER_ORDER_BY_VALIDSINCE="Valid from"
+SP.FIELD.HEADER_ORDER_BY_VALIDUNTIL="Valid until"
 SP.FIELD.HEADER_VALIDSINCE="@todo"
 SP.FIELD.HEADER_VALIDUNTIL="@todo"
 SP.FIELD.ISFREE_HEAD="Fee"
