--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -29,6 +29,9 @@ SP.META_DATA="Meta Data"
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_POSITION="Position"
 SP.EMN_ORDER_BY="Order by"
+SP.SHOW_YES="Show"
+SP.SHOW_NO="Hide"
+
 
 ; Toolbar
 SP.TB.SAVE_ONLY="Save"
@@ -203,7 +206,7 @@ SP.CATN.ORDER_BY_STATE_ASC="Unpublished state first"
 SP.CATN.ORDER_BY_STATE_DESC="Published state first"
 SP.CATN.ORDER_BY_APPR_ASC="Not approved first"
 SP.CATN.ORDER_BY_APPR_DESC="Approved first"
-SP.CATN.ORDER_BY_ORDER_ASC="Position descending"
+SP.CATN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.CATN.ORDER_BY_ORDER_DESC="Position descending"
 
 ;; Edit Entry
@@ -232,15 +235,24 @@ SP.CATN.EDIT_DATA="Edit Data"
 
 ; General Configuration
 ;; Section
+SP.SECN.CFG.SECTION_CONFIGURATION="Section"
 SP.SECN.CFG.SECTION_NAME="Name"
 SP.SECN.ADD_SECTION_ALIAS="Alias"
 SP.SECN.CFG.SECTION_DESCRIPTION="Description"
+SP.SECN.CFG.ADD_SECTION_META_DATA="Add Meta Data"
+SP.SECN.CFG.PUBLISHING="Publishing"
 
 ;; General Options
-SP.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing Entry after"
+SP.SECN.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing after"
 SP.DAYS="days"
+SP.SECN.CFG.ENTRY_TITLE_FIELD="Name Field"
+SP.SECN.CFG.SHOW_CATEGORY_ICONS="Icons"
+SP.SECN.CFG.SHOW_CATEGORY_INTROTEXT="Introtext"
+SP.SECN.CFG.SHOW_CATEGORY_DESC="Description"
+SP.SECN.CFG.PARSE_CATEGORY_DESC="Parse Description"
+SP.SECN.CFG.ENTRY_SETTINGS="Entry Settings"
 
-;; Template Data
+;; Template
 SP.ORDER_BY_NAME_ASCENDING="Name ascending"
 SP.ORDER_BY_NAME_DESCENDING="Name descending"
 SP.ORDER_BY_COUNT_ASCENDING="Counter ascending"
@@ -255,7 +267,23 @@ SP.ORDER_BY_UPDATE_DATE_ASC="Last update date ascending"
 SP.ORDER_BY_UPDATE_DATE_DESC="Last update date descending"
 SP.ORDER_BY_EXPIRATION_DATE_ASC="Expiration date ascending"
 SP.ORDER_BY_EXPIRATION_DATE_DESC="Expiration date descending"
+SP.SECN.CFG.TEMPLATE_DATA="Template"
+SP.SECN.CFG.CLISTING_SETTINGS="Category Settings"
+SP.SECN.CFG.ELISTING_SETTINGS="Entry Settings"
 
+SP.SEC.CFG.NUMBER_CATS_LINE="Number of Categories per Line"
+SP.SECN.CFG.ORDER_CATEGORIES_BY="Order by"
+SP.SECN.CFG.PASS_CAT_DESC_TO_TEMPLATE="Pass Description to Template"
+SP.SECN.CFG.PASS_CAT_DATA_TO_TEMPLATE="Pass Meta Data to Template"
+SP.SEC.CFG.PASS_SUBCATS_TO_TEMPLATE="Pass Subcategories to Template"
+SP.SECN.CFG.ORDER_ENTRIES_BY="Order by"
+SP.SEC.CFG.NUMBER_ENTRIES_PAGE="Number of Entries per Page"
+SP.SEC.CFG.NUMBER_ENTRIES_LINE="Number of Entries per Line"
+SP.SECN.CFG.PASS_ENTRY_META_TEMPLATE="Pass Meta Data to Template"
+SP.SEC.CFG.PASS_SEL_CATS_OF_ENTRY_TO_TEMPLATE="Pass Selected Categories of an Entry to Template"
+
+;; Security
+SP.SECN.CFG.SECURITY_SETTINGS="Security"
 
 ; seemingly unused
 ;;SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
@@ -501,8 +529,8 @@ SP.CAT.SHOW_INTROTEXT="Show Introtext"
 SP.CAT.PARSE_CAT_DES="Parse Category Description"
 SP.CAT.STATE_CHANGED="The state of selected category has been changed"
 SP.CATEGORY.HEADER_TOGGLE="Toggle selected categories"
-SP.CATEGORY.HEADER_C_SID="ID"
-SP.CATEGORY.HEADER_ORDER_BY_C_SID="Order categories by ID"
+SP.CATEGORY.HEADER_C_SID="Id"
+SP.CATEGORY.HEADER_ORDER_BY_C_SID="Order categories by Id"
 SP.CATEGORY.HEADER_NAME="Category Name "
 SP.CATEGORY.HEADER_ORDER_BY_NAME="Order categories by name "
 SP.CATEGORY.HEADER_STATE="State"
@@ -585,6 +613,7 @@ SP.SEC.CFG.SHOW_CATEGORY_DESC="Show Category Description"
 SP.SEC.CFG.PARSE_CATEGORY_DESC="Parse Category Description"
 SP.SEC.CFG.ALLOW_ADD_ENTRY_UP_TO="Allow adding Entry in up to:categories"
 SP.SEC.CFG.SECURITY_SETTINGS="Security Settings"
+SP.SEC.CFG.STOP_PUBLISHING_ENTRY_AFTER="Stop publishing Entry after:days"
 SP.SEC.CFG.ALLOWED_TAGS="Allowed Tags"
 SP.SEC.CFG.ALLOWED_ATTRIBUTES="Allowed Attributes"
 SP.SEC.CFG.SECTION_TEMPLATE="Section Template"
@@ -622,7 +651,7 @@ SP.SEC.CFG.REDIRECTS_CAT_SPACER="Unauthorized Access to a Category"
 SP.SEC.CFG.REDIRECTS_SECTION_SPACER="Unauthorized Access to a Section"
 SP.SEC.CFG.REDIRECTS_ERR_OPT="Show Standard Error Page"
 SP.SEC.CFG.REDIRECTS_RED_OPT="Redirect to Address Below"
-SP.SEC.CFG.REDIRECTS_DO="Behavior"
+SP.SEC.CFG.REDIRECTS_DO="Behaviour"
 SP.SEC.CFG.REDIRECTS_TO="Redirect To"
 SP.SEC.CFG.REDIRECTS_MSG="Redirect Message"
 SP.SEC.CFG.REDIRECTS_MSGTYPE_NONE_OPT="No Message"
