--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,6 +19,10 @@
 ; SobiPro 1.1
 ;=========
 
+
+SP.PN.GO="Go!"
+SP.LISTING_LIMIT="Limit on site"
+
 ; Joomla Menu Manager
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
